--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -22,7 +22,7 @@
        <div>
        <time>Week 2</time>
        <img src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
-       Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!
+       Powerful supplements that promote your metabolism and keep your glucose healthy!
        </div> 
 
 
@@ -34,7 +34,7 @@
        <div>
        <time>Week 3</time>
        <img src="{{ 'thirty-day-break-3.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
-       Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!
+       Easy-to-do exercises that will energize your day you’ll actually look forward to! 
        </div> 
 
 
@@ -46,7 +46,7 @@
        <div>
        <time>Week 4</time>
        <img src="{{ 'thirty-day-break-4.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
-       Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!
+       Finding the balance between food, movement and supplements! We're here to cheer you on!
        </div> 
 
 
