--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -10,8 +10,9 @@
      
        <div>
        <time>Week 1</time>
-       <img src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+      
        Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!
+       <img src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
        </div> 
           
     
@@ -20,9 +21,9 @@
 
 
        <div>
-       <time>Week 2</time>
-       <img src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
        Powerful supplements that promote your metabolism and keep your glucose healthy!
+       <time>Week 2</time><img src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="546" alt="" loading="lazy">
+
        </div> 
 
 
@@ -33,8 +34,9 @@
 
        <div>
        <time>Week 3</time>
-       <img src="{{ 'thirty-day-break-3.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+       
        Easy-to-do exercises that will energize your day you’ll actually look forward to! 
+       <img src="{{ 'thirty-day-break-3.png' | asset_url }}" width="1097" height="675" alt="" loading="lazy">
        </div> 
 
 
@@ -45,8 +47,9 @@
 
        <div>
        <time>Week 4</time>
-       <img src="{{ 'thirty-day-break-4.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+      
        Finding the balance between food, movement and supplements! We're here to cheer you on!
+       <img src="{{ 'thirty-day-break-4.png' | asset_url }}" width="889" height="539" alt="" loading="lazy">
        </div> 
 
 
