--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -114,6 +114,8 @@
       bottom: 0;
       width: 400px;
       padding: 15px;
+      display: flex;
+      flex-wrap: wrap;
     }
 
     .timeline ul li div::before {
