--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -9,7 +9,7 @@
       
      
        <div>
-       <time>Week 1</time>
+       <div class="time">Week 1</div>
       
        Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!
        <img src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
@@ -22,7 +22,7 @@
 
        <div>
        Powerful supplements that promote your metabolism and keep your glucose healthy!
-       <time>Week 2</time><img src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="546" alt="" loading="lazy">
+       <div class="time">Week 2</div><img src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="546" alt="" loading="lazy">
 
        </div> 
 
@@ -33,7 +33,7 @@
 
 
        <div>
-       <time>Week 3</time>
+       <div class="time">Week 3</div>
        
        Easy-to-do exercises that will energize your day you’ll actually look forward to! 
        <img src="{{ 'thirty-day-break-3.png' | asset_url }}" width="1097" height="675" alt="" loading="lazy">
@@ -46,7 +46,7 @@
 
 
        <div>
-       <time>Week 4</time>
+       <div class="time">Week 4</div>
       
        Finding the balance between food, movement and supplements! We're here to cheer you on!
        <img src="{{ 'thirty-day-break-4.png' | asset_url }}" width="889" height="539" alt="" loading="lazy">
@@ -130,7 +130,7 @@
 
  
 
-    time {
+    .time {
       display: block;
       font-size: 1.2rem;
       font-weight: bold;
