--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -131,10 +131,15 @@
  
 
     .time {
-      display: block;
-      font-size: 1.2rem;
-      font-weight: bold;
-      margin-bottom: 8px;
+      font-family: 'PP Radio Grotesk';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 45px;
+      line-height: 49px;
+      text-align: center;
+      letter-spacing: -0.01em;
+
+      color: #B9C86B;
     }
 
 
