--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -32,7 +32,7 @@
     <li>
 
 
-       <div class="li-wrapper">
+       <div>
        <div class="time">Week 3</div>  
        Easy-to-do exercises that will energize your day you’ll actually look forward to! 
        <img src="{{ 'thirty-day-break-3.png' | asset_url }}" width="1097" height="675" alt="" loading="lazy">
@@ -108,21 +108,21 @@
      
     }
 
-    .timeline ul li .li-wrapper {
+    .timeline ul li div {
       position: relative;
       bottom: 0;
       padding: 15px;
       display: flex;
     }
 
-    .timeline ul li .li-wrapper::before {
+    .timeline ul li div::before {
       content: '';
       position: absolute;
       width: 0;
       height: 0;
     }
 
-    .timeline ul li .li-wrapper {
+    .timeline ul li div {
       left: 45px;
     }
 
@@ -155,13 +155,13 @@
         opacity: 1.0;
     }
 
-    .timeline ul li .li-wrapper {
+    .timeline ul li div {
       visibility: hidden;
       opacity: 0;
       transition: all .5s ease-in-out;
     }
 
-    .timeline ul li .li-wrapper {
+    .timeline ul li div {
       transform: translate3d(200px, 0, 0);
     }
 
