--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -35,7 +35,7 @@
        <div>
        <div class="time">Week 3</div>  
        Easy-to-do exercises that will energize your day you’ll actually look forward to! 
-       <img src="{{ 'thirty-day-break-3.png' | asset_url }}" width="1097" height="675" alt="" loading="lazy">
+       <img class="img-break" src="{{ 'thirty-day-break-3.png' | asset_url }}" width="1097" height="675" alt="" loading="lazy">
        </div> 
 
 
