--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -33,8 +33,9 @@
 
 
        <div>
+    <div class="text-break">
        <div class="time">Week 3</div>  
-       Easy-to-do exercises that will energize your day you’ll actually look forward to! 
+       Easy-to-do exercises that will energize your day you’ll actually look forward to! </div>
        <img class="img-break" src="{{ 'thirty-day-break-3.png' | asset_url }}" width="1097" height="675" alt="" loading="lazy">
        </div> 
 
