--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -8,23 +8,24 @@
     <li>
       
      
-       <div>
-       <div class="time">Week 1</div>
-      
-       Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!
-       <img src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
-       </div> 
+    <div>
+      <div class="text-break">
+      <div class="time">Week 1</div>  
+      Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another! </div>
+      <img class="img-break" src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+      </div> 
           
     
     </li>
     <li>
 
 
-       <div>
-       Powerful supplements that promote your metabolism and keep your glucose healthy!
-       <div class="time">Week 2</div><img src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="546" alt="" loading="lazy">
-
-       </div> 
+    <div>
+      <div class="text-break">
+      <div class="time">Week 2</div>  
+      Easy-to-do exercises that will energize your day you’ll actually look forward to!  </div>
+      <img class="img-break" src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="546" alt="" loading="lazy">
+      </div> 
 
 
     </li>
@@ -46,13 +47,12 @@
 
 
        <div>
-       <div class="time">Week 4</div>
-      
-       Finding the balance between food, movement and supplements! We're here to cheer you on!
-       <img src="{{ 'thirty-day-break-4.png' | asset_url }}" width="889" height="539" alt="" loading="lazy">
-       </div> 
-
-
+        <div class="text-break">
+        <div class="time">Week 4</div>  
+        Finding the balance between food, movement and supplements! We're here to cheer you on! </div>
+        <img src="{{ 'thirty-day-break-4.png' | asset_url }}" width="889" height="539" alt="" loading="lazy">
+        </div> 
+  
     </li>
     
   
