--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -7,14 +7,25 @@
   <ul>
     <li>
       
-
+     
+    <div>
+      <div class="text-break">
+      <time>Week 1</time>  
+      Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another! </div>
+      <img class="img-break" src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+      </div> 
           
     
     </li>
     <li>
 
 
-   
+    <div>
+      <div class="text-break">
+      <time>Week 2</time>  
+      Easy-to-do exercises that will energize your day you’ll actually look forward to!  </div>
+      <img class="img-break" src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="546" alt="" loading="lazy">
+      </div> 
 
 
     </li>
@@ -22,14 +33,26 @@
     <li>
 
 
-     
+       <div>
+       <div class="text-break">
+       <time>Week 3</time>  
+       Easy-to-do exercises that will energize your day you’ll actually look forward to! </div>
+       <img class="img-break" src="{{ 'thirty-day-break-3.png' | asset_url }}" width="1097" height="675" alt="" loading="lazy">
+       </div> 
+
 
     </li>
 
     <li>
 
 
-      
+       <div>
+        <div class="text-break">
+        <time>Week 4</time>  
+        Finding the balance between food, movement and supplements! We're here to cheer you on! </div>
+        <img src="{{ 'thirty-day-break-4.png' | asset_url }}" width="889" height="539" alt="" loading="lazy">
+        </div> 
+  
     </li>
     
   
