--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -134,7 +134,6 @@
       line-height: 49px;
       text-align: center;
       letter-spacing: -0.01em;
-
       color: #B9C86B;
     }
 
@@ -181,7 +180,11 @@
         width: calc(100vw - 91px);
       }
      
-    } 
+    }
+    
+    .time {
+      line-height: 30px;
+    }
 
 </style>
 
