--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -178,6 +178,8 @@
       }
       .timeline ul li div {
         width: calc(100vw - 91px);
+        flex-direction: column;
+        justify-content: flex-start;
       }
      
     }
