--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -31,7 +31,7 @@
 
 
        <div>
-  <divclass="time">Week 3</divclass=>
+  <div class="time">Week 3</div>
 
        <img class="img-break" src="{{ 'thirty-day-break-3.png' | asset_url }}" width="1097" height="675" alt="" loading="lazy">
        </div> 
