--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -109,7 +109,7 @@
       position: relative;
       bottom: 0;
       padding: 15px;
-      width: calc(100vw - 40px);;
+      width: 70vw;
       display: flex;
     }
 
