--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -109,8 +109,8 @@
       position: relative;
       bottom: 0;
       padding: 15px;
-      width: 70vw;
-      display: flex;
+      width: 700px;
+      
     }
 
     .timeline ul li div::before {
@@ -154,7 +154,7 @@
     }
 
     .timeline ul li div {
-      transform: translate3d(200px, 0, 0);
+      transform: translate3d(700px, 0, 0);
     }
 
   
@@ -173,6 +173,7 @@
       }
       .timeline ul li div {
         width: calc(100vw - 91px);
+        display:flex
         flex-direction: column;
         justify-content: flex-start;
       }
