--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -132,7 +132,9 @@
       color: #B9C86B;
     }
 
-
+    .img-break {
+      padding-left: 10vw;
+    }
  
 
 
@@ -182,6 +184,10 @@
     
     .time {
       line-height: 30px;
+    }
+
+    .img-break {
+      padding-left: unset;
     }
 
 </style>
