--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -9,7 +9,8 @@
       
      
     <div>
-      <div class="time">Week 1</div>
+     <div class="time-and-text">
+     <div class="time">Week 1</div></div>
       <img class="img-break" src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
       </div> 
           
@@ -19,7 +20,8 @@
 
 
     <div>
-  <div class="time">Week 2</div>
+  <div class="time-and-text">
+  <div class="time">Week 2</div></div>
 
       <img class="img-break" src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="546" alt="" loading="lazy">
       </div> 
@@ -31,7 +33,8 @@
 
 
        <div>
-  <div class="time">Week 3</div>
+ <div class="time-and-text">
+ <div class="time">Week 3</div></div>
 
        <img class="img-break" src="{{ 'thirty-day-break-3.png' | asset_url }}" width="1097" height="675" alt="" loading="lazy">
        </div> 
@@ -43,8 +46,8 @@
 
 
        <div>
-        
-        <div class="time">Week 4</div>
+        <div class="time-and-text">
+        <div class="time">Week 4</div></div>
 
         <img src="{{ 'thirty-day-break-4.png' | asset_url }}" width="889" height="539" alt="" loading="lazy">
         </div> 
@@ -120,7 +123,10 @@
       height: 0;
     }
 
-
+  .time-and-text {
+    display: flex;
+    flex-direction: column;
+  }
  
 
     .time {
