--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -177,7 +177,7 @@
     }
 
     .timeline ul li div {
-      transform: translate3d(700px, 0, 0);
+      transform: translate3d(0, 0, 0);
     }
 
   
