--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -176,6 +176,11 @@
       transition: all .5s ease-in-out;
     }
 
+    .timeline ul li div {
+      transform: translate3d(700px, 0, 0);
+    }
+
+  
 
     .timeline ul li.in-view div {
       transform: none;
