--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -97,6 +97,7 @@
       width: 6px;
       padding-top: 50px;
       background: rgba(185, 200, 107, 0.5);
+      margin-left: 15%;
       
     }
 
