--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -117,7 +117,7 @@
     .timeline ul li div {
       position: relative;
       bottom: 0;
-      padding: 15px;
+      padding: 0 15px;
       width: 400px;
       display: flex;
       
