--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -144,7 +144,7 @@
   }
  
 
-    .time {
+    .time-and-text .time {
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
       font-size: clamp(35px, 2vw, 45px);
@@ -197,7 +197,7 @@
         flex-direction: column;
       }
 
-      .time {
+      .time-and-text .time {
         line-height: 30px;
       }
 
