--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -11,6 +11,7 @@
     <div>
      <div class="time-and-text">
      <div class="time">Week 1</div>
+     <div class="border-bottom"></div>
      <p>Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!</p>
      </div>
       <img class="img-break" src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
@@ -24,6 +25,7 @@
     <div>
     <div class="time-and-text">
       <div class="time">Week 2</div>
+      <div class="border-bottom"></div>
       <p>Powerful supplements that promote your metabolism and keep your glucose healthy!</p></div>
       <img class="img-break" src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="546" alt="" loading="lazy">
       </div> 
@@ -35,6 +37,7 @@
        <div>
     <div class="time-and-text">
      <div class="time">Week 3</div>
+     <div class="border-bottom"></div>
      <p>Easy-to-do exercises that will energize your day you’ll actually look forward to! </p>
      </div>
 
@@ -45,11 +48,10 @@
     </li>
 
     <li>
-
-
        <div>
         <div class="time-and-text">
         <div class="time">Week 4</div>
+        <div class="border-bottom"></div>
         <p>
           Finding the balance between food, movement and supplements! We're here to cheer you on!
         </p>
@@ -153,6 +155,9 @@
       color: #B9C86B;
       z-index: 1;
 
+    }
+
+    .time-and-text .border-bottom {
       border-bottom: 2px solid #B9C86B;
     }
 
