--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -159,6 +159,8 @@
 
     .time-and-text .border-bottom {
       border-bottom: 2px solid #B9C86B;
+      padding-top: 20px;
+      max-width: 150px;
     }
 
  
