--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -319,3 +319,53 @@
 
 
 </script>
+
+
+<script>
+    const accordionItemHeaders = document.querySelectorAll(".question");
+
+accordionItemHeaders.forEach(accordionItemHeader => {
+  accordionItemHeader.addEventListener("click", event => {
+
+    {% if isAllowOneOpen %}
+        const currentlyActiveAccordionItemHeader = document.querySelector(".question.active");
+        if (currentlyActiveAccordionItemHeader && currentlyActiveAccordionItemHeader!==accordionItemHeader) {
+            currentlyActiveAccordionItemHeader.classList.toggle("active");
+            currentlyActiveAccordionItemHeader.nextElementSibling.style.maxHeight = 0;
+        }
+    {% endif %}
+
+    accordionItemHeader.classList.toggle("active");
+    const accordionItemBody = accordionItemHeader.nextElementSibling;
+    if(accordionItemHeader.classList.contains("active")) {
+        accordionItemBody.style.maxHeight = accordionItemBody.scrollHeight + "px";
+    }
+    else {
+      accordionItemBody.style.maxHeight = 0;
+    }
+
+  });
+});
+
+faqIngredientsMainSliderAllInOne = new Swiper('.faq-section .ingredients-main-slider.swiper', {
+        slidesPerView: 1,
+        spaceBetween: 15,
+        watchSlidesVisibility: false,
+        loop: false,
+        autoHeight: true,
+        slideToClickedSlide: true,
+        navigation: {
+            nextEl: '.faq-section .swiper-button-next',
+            prevEl: '.faq-section .swiper-button-prev',
+            disabledClass: 'disabled'
+        }
+    });
+
+    // Open FAQ
+    $('.question').click(function() {
+       woopra.track('Open FAQ', {
+         question_display_text: $(this).text(),
+         question_order:  $(this).parents('.faq-item').index() + 1
+       })
+       });
+</script>
