--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -26,7 +26,7 @@
     <div class="time-and-text">
       <div class="time">Week 2</div>
       <div class="border-bottom"></div>
-      <p>Powerful supplements that promote your metabolism and keep your glucose healthy!</p></div>
+      <p>Powerful supplements that promote your metabolism and keep your glucose healthy!</p>
       <div class="faq">
               <div class="faq-item">
               <div class="question">
@@ -39,6 +39,8 @@
          </div>
 
       </div>
+      </div>
+     
       <img class="img-break" src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="546" alt="" loading="lazy">
       </div> 
     </li>
