--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -94,12 +94,14 @@
 
 .faq .faq-item .question {
  padding: 0.7rem 3rem 0.7rem 0;
- line-height: 1.25rem;
  display: flex;
- align-items: center;
  position: relative;
  cursor: pointer;
+ font-family: 'DM Sans';
+ font-weight: 500;
  font-size: 18px;
+ line-height: 35px;
+ color: #E8E8B0;
 }
 
 .faq .faq-item .question:after {
@@ -108,6 +110,7 @@
  position: absolute;
  right: 1rem;
  transition: transform 0.3s;
+ color: #E8E8B0;
 }
 
 
