--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -94,7 +94,7 @@
 }
 
 .faq .faq-item .question {
- padding: 0.7rem 3rem 0.7rem 0;
+ padding: 0.7rem 1rem 0.7rem 0;
  display: flex;
  position: relative;
  cursor: pointer;
@@ -103,6 +103,9 @@
  font-size: 18px;
  line-height: 35px;
  color: #E8E8B0;
+ width: 100%;
+ flex-wrap: nowrap;
+ flex-direction: column;
 }
 
 .faq .faq-item .question:after {
