--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -128,9 +128,13 @@
 }
 
 .faq .faq-item .answer p {
- padding: 0 1rem 1rem;
- line-height: 1.5rem;
- font-weight: 300;
+ padding: 0 1rem 1rem 0;
+ font-family: 'DM Sans';
+ font-weight: 400;
+ font-size: 18px;
+ line-height: 21px;
+ color: #404733;
+
 }
 
  
