--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -102,7 +102,7 @@
  font-weight: 500;
  font-size: 18px;
  line-height: 35px;
- color: #E8E8B0;
+ color: var(--vomit);
  width: 100%; 
 }
 
@@ -112,7 +112,7 @@
  position: absolute;
  right: 1rem;
  transition: transform 0.3s;
- color: #E8E8B0;
+ color: var(--vomit);
 }
 
 
@@ -133,8 +133,8 @@
  font-weight: 400;
  font-size: 18px;
  line-height: 21px;
- color: #404733;
- background: #E8E8B0; 
+ color: var(--dark-green);
+ background: var(--vomit); 
 }
 
  
