--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -129,13 +129,13 @@
 }
 
 .faq .faq-item .answer p {
- padding: 0 1rem 1rem 0;
- font-family: 'DM Sans';
- font-weight: 400;
- font-size: 18px;
- line-height: 21px;
- color: var(--dark-green);
- 
+  padding: 0 1rem 1rem;
+  font-family: 'DM Sans';
+  font-weight: 400;
+  font-size: clamp(12px, 2vw, 17px);
+  line-height: 17px;
+  color: var(--dark-green);
+  
 }
 
  
