--- a/snippets/thirty-day-break-it-down-origin.liquid
+++ b/snippets/thirty-day-break-it-down-origin.liquid
@@ -5,18 +5,79 @@
      <div class="break-it">Let’s break it down:</div>
 
   <ul>
-    {% for week in weeks %}
-      <li>
-      <div>
-       <div class="time-and-text">
-       <div class="time">Week 1</div>
-       <div class="border-bottom"></div>
-       <p>Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!</p>
-       </div>
-        <img class="img-break" src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+    <li>
+      
+     
+    <div>
+     <div class="time-and-text">
+     <div class="time">Week 1</div>
+     <div class="border-bottom"></div>
+     <p>Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!</p>
+     </div>
+      <img class="img-break" src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+      </div> 
+          
+    
+    </li>
+    <li>
+
+
+    <div>
+    <div class="time-and-text">
+      <div class="time">Week 2</div>
+      <div class="border-bottom"></div>
+      <p>Powerful supplements that promote your metabolism and keep your glucose healthy!</p>
+      <div class="faq">
+              <div class="faq-item">
+              <div class="question">
+              Learn more about Curalin
+              </div>
+              <div class="answer">
+                  <p>Curalin is a clinically tested blood sugar support supplement. It’s rated #1 most recommended by the world’s largest blood sugar support community.</p>
+
+              </div>
+         </div>
+
+      </div>
+      </div>
+     
+      <img class="img-break" src="{{ 'thirty-day-break-2.png' | asset_url }}" width="831" height="546" alt="" loading="lazy">
+      </div> 
+    </li>
+
+    <li>
+
+
+       <div>
+    <div class="time-and-text">
+     <div class="time">Week 3</div>
+     <div class="border-bottom"></div>
+     <p>Easy-to-do exercises that will energize your day you’ll actually look forward to! </p>
+     </div>
+
+       <img class="img-break" src="{{ 'thirty-day-break-3.png' | asset_url }}" width="1097" height="675" alt="" loading="lazy">
+       </div> 
+
+
+    </li>
+
+    <li>
+       <div>
+        <div class="time-and-text">
+        <div class="time">Week 4</div>
+        <div class="border-bottom"></div>
+        <p>
+          Finding the balance between food, movement and supplements! We're here to cheer you on!
+        </p>
+        </div>
+
+        <img src="{{ 'thirty-day-break-4.png' | asset_url }}" width="889" height="539" alt="" loading="lazy">
         </div> 
-      </li>
-    {% endfor %}
+  
+    </li>
+    
+  
+  
   </ul>
 
   </div>
