--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -1,4 +1,4 @@
-
+{% assign weeks = "Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!" | split: "|" %}
 
 <section class="timeline">
 <div class="container">
@@ -9,11 +9,11 @@
       <li>
       <div>
        <div class="time-and-text">
-       <div class="time">Week 1</div>
+       <div class="time">Week {{ forloop.index }}</div>
        <div class="border-bottom"></div>
-       <p>Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!</p>
+       <p>{{ week }}</p>
        </div>
-        <img class="img-break" src="{{ 'thirty-day-break-1.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+        <img class="img-break" src="{{ 'thirty-day-break-{{ forloop.index }}.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
         </div> 
       </li>
     {% endfor %}
