--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -11,7 +11,7 @@
             <div class="border-bottom"></div>
             <p>{{ week }}</p>
           </div>
-          <img class="img-break" src="{{ 'thirty-day-break-{{ forloop.index }}.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+          <img class="img-break" src="{{ 'thirty-day-break-' | append: forloop.index | append: '.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
         </li>
       {% endfor %}
     </ul>
