--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -106,7 +106,7 @@
       padding-top: 50px;
       background: rgba(185, 200, 107, 0.5);
       margin-left: 15%;
-      
+      display: flex;
     }
 
     .timeline ul li::after {
@@ -141,6 +141,11 @@
   .time-and-text {
     display: flex;
     flex-direction: column;
+    position: relative;
+    bottom: 0;
+    padding: 0 11px;
+    min-width: 400px;
+    padding-left: 30px;
   }
 
   .time-and-text p {
