--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -1,4 +1,7 @@
-{% assign weeks = "Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!" | split: "|" %}
+{% assign weeks = "Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!
+|Powerful supplements that promote your metabolism and keep your glucose healthy!
+|Easy-to-do exercises that will energize your day you’ll actually look forward to! 
+|Finding the balance between food, movement and supplements! We're here to cheer you on!" | split: "|" %}
 
 <section class="timeline">
 <div class="container">
