--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -6,8 +6,10 @@
 <section class="timeline">
 <div class="container">
   <div class="break-it">Let’s break it down:</div>
+ 
     <ul>
       {% for week in weeks %}
+        <div>
         <li>
           <div class="time-and-text">
             <div class="time">Week {{ forloop.index }}</div>
