--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -11,7 +11,7 @@
       {% for week in weeks %}
        
         <li>
-          <div>
+          {% comment %} <div> {% endcomment %}
           <div class="time-and-text">
             <div class="time">Week {{ forloop.index }}</div>
             <div class="border-bottom"></div>
@@ -32,7 +32,7 @@
             {% endif %}
           </div>
           <img class="img-break" src="{{ 'thirty-day-break-' | append: forloop.index | append: '.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
-          </div>
+          {% comment %} </div> {% endcomment %}
         </li>
        
       {% endfor %}
