--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -83,6 +83,7 @@
  overflow: hidden;
  transition: max-height .2s ease-out;
  background: var(--vomit); 
+ border-radius: 5px;
 }
 
 .faq .faq-item .answer p {
