--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -23,7 +23,7 @@
                       Learn more about Curalin
                       </div>
                       <div class="answer">
-                          <p>Curalin is a clinically tested blood sugar support supplement. It’s rated #1 most recommended by the world’s largest blood sugar support community.</p>
+                          <p>Curalin is a clinically tested blood sugar support supplement. It’s rated №1 most recommended by the world’s largest blood sugar support community.</p>
 
                       </div>
                  </div>
