--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -244,6 +244,10 @@
         line-height: 30px;
       }
 
+      .time-and-text .border-bottom {
+        max-width: 30vw;
+      }
+
       .time-and-text p {
         font-size: 20px;
         line-height: 24px;
