--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -1,7 +1,8 @@
 {% assign weeks = "Dozens of delicious recipes you can choose from that don’t compromise flavor! Don’t like a certain recipe? Choose another!
 |Powerful supplements that promote your metabolism and keep your glucose healthy!
 |Easy-to-do exercises that will energize your day you’ll actually look forward to! 
-|Finding the balance between food, movement and supplements! We're here to cheer you on!" | split: "|" %}
+|Finding the balance between food, movement and supplements! We're here to cheer you on!
+|You’ve gained a good base for practicing healthy habits that you will keep with you on your health journey!" | split: "|" %}
 
 <section class="timeline">
 <div class="container">
@@ -64,12 +65,19 @@
 }
 
 .faq .faq-item .question:after {
- content: "+";
- font-size: 2rem;
- position: absolute;
- right: 1rem;
- transition: transform 0.3s;
- color: var(--vomit);
+  content: "+";
+  font-size: 17px;
+  position: absolute;
+  right: 1rem;
+  transition: transform 0.3s;
+  color: var(--vomit);
+  width: 18px;
+  height: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: solid 1px beige;
+  border-radius: 50%;
 }
 
 
