--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -14,6 +14,9 @@
         <li>
           <div class="wrapper-div">
           <div class="time-and-text">
+            {% if forloop.index == 5 %}
+            <div class="time">Beyond</div>
+           {% endif %}
             <div class="time">Week {{ forloop.index }}</div>
             <div class="border-bottom"></div>
             <p>{{ week }}</p>
