--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -148,7 +148,7 @@
       content: '';
       position: absolute;
       left: 50%;
-      top: 0;
+      bottom: 0;
       transform: translateX(-50%);
       width: 30px;
       height: 30px;
