--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -15,7 +15,7 @@
           <div class="wrapper-div">
           <div class="time-and-text">
             {% if forloop.index == 5 %}
-            <img class="img-break" src="{{ 'thirty-day-break-infinity.png' | asset_url }}" width="86" height="42" alt="" loading="lazy">
+            <img class="img-beyond" src="{{ 'thirty-day-break-infinity.png' | asset_url }}" width="86" height="42" alt="" loading="lazy">
             <div class="time">Beyond</div>
             {% else %}
             <div class="time">Week {{ forloop.index }}</div>
