--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -251,6 +251,9 @@
 
 
     @media screen and (max-width: 768px) {
+      .img-break img {
+        max-width: 100%;
+      }
       .timeline ul li {
         margin-left: 20px;
       }
