--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -212,7 +212,7 @@
       padding-bottom: 10px;
     }
 
-    .img-break img {
+    .img-break {
       max-width: 150%;
     }
 
@@ -251,7 +251,7 @@
 
 
     @media screen and (max-width: 768px) {
-      .img-break img {
+      .img-break {
         max-width: 100%;
       }
       .timeline ul li {
