--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -2,7 +2,7 @@
 |Powerful supplements that promote your metabolism and keep your glucose healthy!
 |Easy-to-do exercises that will energize your day you’ll actually look forward to! 
 |Finding the balance between food, movement and supplements! We're here to cheer you on!
-|You’ve gained a good base for practicing healthy habits that you will keep with you on your health journey!" | split: "|" %}
+" | split: "|" %}
 
 <section class="timeline">
 <div class="container">
@@ -14,12 +14,12 @@
         <li>
           <div class="wrapper-div">
           <div class="time-and-text">
-            {% if forloop.index == 5 %}
+           
             <img class="img-beyond" src="{{ 'thirty-day-break-infinity.png' | asset_url }}" width="86" height="42" alt="" loading="lazy">
             <div class="time">Beyond</div>
-            {% else %}
+           
             <div class="time">Week {{ forloop.index }}</div>
-           {% endif %}           
+                   
             <div class="border-bottom"></div>
             <p>{{ week }}</p>
             {% if forloop.index == 2 %}
@@ -39,9 +39,22 @@
           </div>
           <img class="img-break" src="{{ 'thirty-day-break-' | append: forloop.index | append: '.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
           </div>
-        </li>
-       
+        </li> 
       {% endfor %}
+      <li>
+        <div class="wrapper-div">
+        <div class="time-and-text">
+
+          <img class="img-beyond" src="{{ 'thirty-day-break-infinity.png' | asset_url }}" width="86" height="42" alt="" loading="lazy">
+          <div class="time">Beyond</div>
+
+          <div class="border-bottom"></div>
+          <p>You’ve gained a good base for practicing healthy habits that you will keep with you on your health journey!</p>
+
+        </div>
+        <img class="img-break" src="{{ 'thirty-day-break-5.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+        </div>
+      </li>
     </ul>
   </div>
 </section>
