--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -40,6 +40,17 @@
       <li>
         <div class="wrapper-div">
         <div class="time-and-text">
+          <div class="time achivement">Achievement 
+          unlocked!</div>
+          <div class="border-bottom"></div>
+          <p>You’ve gained a good base for practicing healthy habits that you will keep with you on your health journey!</p>
+        </div>
+        <img class="img-break" src="{{ 'thirty-day-break-5.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+        </div>
+      </li>
+      <li>
+        <div class="wrapper-div">
+        <div class="time-and-text">
           <img class="img-beyond" src="{{ 'thirty-day-break-infinity.png' | asset_url }}" width="86" height="42" alt="" loading="lazy">
           <div class="time">Beyond</div>
           <div class="border-bottom"></div>
@@ -220,6 +231,16 @@
 
     .img-break {
       max-width: 150%;
+    }
+
+    .time-and-text .time.achivement {
+      font-family: 'PP Radio Grotesk';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 45px;
+      line-height: 44px;   
+      letter-spacing: -0.01em;
+      color: #FFFFFF;
     }
 
  
