--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -277,6 +277,11 @@
 
 
     @media screen and (max-width: 768px) {
+      .time-and-text .time.achivement {   
+        font-size: 35px;
+        line-height: 30px;       
+      }
+
       .img-break {
         max-width: 100%;
       }
