--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -279,7 +279,8 @@
     @media screen and (max-width: 768px) {
       .time-and-text .time.achivement {   
         font-size: 35px;
-        line-height: 30px;       
+        line-height: 32px;
+        max-width: 67vw;    
       }
 
       .img-break {
