--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -45,7 +45,7 @@
           <div class="border-bottom"></div>
           <p></p>
         </div>
-        <img class="img-break" src="{{ 'thirty-day-break-5.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+        <img class="img-break" src="{{ 'thirty-day-break-confetti.png' | asset_url }}" width="1211" height="211" alt="" loading="lazy">
         </div>
       </li>
       <li>
@@ -56,7 +56,7 @@
           <div class="border-bottom"></div>
           <p>You’ve gained a good base for practicing healthy habits that you will keep with you on your health journey!</p>
         </div>
-        <img class="img-break" src="{{ 'thirty-day-break-5.png' | asset_url }}" width="831" height="513" alt="" loading="lazy">
+        <img class="img-break" src="{{ 'thirty-day-break-5.png' | asset_url }}" width="831" height="596" alt="" loading="lazy">
         </div>
       </li>
     </ul>
