--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -45,7 +45,7 @@
           <div class="border-bottom"></div>
           <p></p>
         </div>
-        <img class="img-break" src="{{ 'thirty-day-break-confetti.png' | asset_url }}" width="1211" height="211" alt="" loading="lazy">
+        <img class="img-break-confetty" src="{{ 'thirty-day-break-confetti.png' | asset_url }}" width="1211" height="211" alt="" loading="lazy">
         </div>
       </li>
       <li>
