--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -233,6 +233,10 @@
       max-width: 150%;
     }
 
+    .img-break-confetty {
+      max-width: 200%;
+    }
+
     .time-and-text .time.achivement {
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
