--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -292,6 +292,9 @@
 
       .img-break-confetty-mb {
         display: block;
+        position: absolute;
+        right: 0;
+        margin-top: 8vw;
       }
       .time-and-text .time.achivement {   
         font-size: 35px;
