--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -283,6 +283,13 @@
       opacity: 1;
     }
 
+    @media screen and (max-width: 1032px){
+      .timeline ul li {
+        margin-left: 20px;
+      }
+    }
+
+
 
 
     @media screen and (max-width: 768px) {
@@ -305,9 +312,7 @@
       .img-break {
         max-width: 100%;
       }
-      .timeline ul li {
-        margin-left: 20px;
-      }
+    
       .timeline ul li .wrapper-div {
         width: calc(100vw - 91px);
         flex-direction: column;
