--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -38,7 +38,7 @@
         </li> 
       {% endfor %}
       <li>
-        <div class="wrapper-div">
+        <div class="wrapper-div dark">
         <div class="time-and-text">
           <div class="time achivement">Achievement 
           unlocked!</div>
@@ -181,6 +181,10 @@
       padding: 0 10px;
       display: flex;
       
+    }
+
+    .timeline ul li .wrapper-div.dark {
+     background: #B9C86B;
     }
 
     .timeline ul li .wrapper-div::before {
