--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -38,7 +38,7 @@
         </li> 
       {% endfor %}
       <li>
-        <div class="wrapper-div dark">
+        <div class="wrapper-div">
         <div class="time-and-text">
           <div class="time achivement">Achievement 
           unlocked!</div>
@@ -183,9 +183,6 @@
       
     }
 
-    .wrapper-div.dark {
-     background: #B9C86B;
-    }
 
     .timeline ul li .wrapper-div::before {
       content: '';
