--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -37,6 +37,7 @@
           </div>
         </li> 
       {% endfor %}
+      <div class="light-div">
       <li>
         <div class="wrapper-div">
         <div class="time-and-text">
@@ -49,6 +50,7 @@
         <img class="img-break-confetty-mb" src="{{ 'thirty-day-break-confetti-mb.png' | asset_url }}" width="368" height="223" alt="" loading="lazy">
         </div>
       </li>
+      </div>
       <li>
         <div class="wrapper-div">
         <div class="time-and-text">
@@ -130,7 +132,11 @@
  </style>
 
 <style>
-
+.light-div {
+  {
+   background: #7B8E42;
+  }
+}
  .timeline {
     background: #555F44;
  }
