--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -37,7 +37,7 @@
           </div>
         </li> 
       {% endfor %}
-      <div class="light-div">
+      <div class="light-div"></div>
       <li>
         <div class="wrapper-div">
         <div class="time-and-text">
@@ -50,7 +50,6 @@
         <img class="img-break-confetty-mb" src="{{ 'thirty-day-break-confetti-mb.png' | asset_url }}" width="368" height="223" alt="" loading="lazy">
         </div>
       </li>
-      </div>
       <li>
         <div class="wrapper-div">
         <div class="time-and-text">
