--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -132,9 +132,11 @@
 
 <style>
 .light-div {
-  {
-   background: #7B8E42;
-  }
+  background: #7B8E42;
+  width: 300%;
+  right: -50%;
+  position: absolute;
+  height: 250px;
 }
  .timeline {
     background: #555F44;
