--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -301,6 +301,9 @@
 
 
     @media screen and (max-width: 768px) {
+      .light-div {
+        height: 172px;
+      }
       .img-break-confetty {
         display: none;
       }
