--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -311,8 +311,8 @@
       .img-break-confetty-mb {
         display: block;
         position: absolute;
-        right: 0;
-        margin-top: 8vw;
+        right: -15vw;
+        top: -10vw;
       }
       .time-and-text .time.achivement {   
         font-size: 35px;
