--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -315,9 +315,10 @@
         top: -10vw;
       }
       .time-and-text .time.achivement {   
-        font-size: 35px;
+        font-size: clamp(32px, 2vw, 36px);
         line-height: 32px;
-        max-width: 67vw;    
+        max-width: 53vw;
+        margin-top: -30px;    
       }
 
       .img-break {
