--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -44,8 +44,9 @@
           <div class="time achivement">Achievement 
           unlocked!</div>
           <div class="border-bottom"></div>
-          <p></p>
+         
         </div>
+        <div class="celebrate">Celebrate your win, rockstar! Together, we’re just getting started!</div>
         <img class="img-break-confetty" src="{{ 'thirty-day-break-confetti.png' | asset_url }}" width="1211" height="211" alt="" loading="lazy">
         <img class="img-break-confetty-mb" src="{{ 'thirty-day-break-confetti-mb.png' | asset_url }}" width="368" height="223" alt="" loading="lazy">
         </div>
@@ -131,6 +132,14 @@
  </style>
 
 <style>
+  .celebrate{
+    font-family: 'PP Radio Grotesk';
+    font-weight: 700;
+    font-size: 45px;
+    line-height: 44px;
+    text-align: center;
+    color: #FFFFFF;
+  }
 .light-div {
   background: #7B8E42;
   width: 300%;
