--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -310,6 +310,10 @@
 
 
     @media screen and (max-width: 768px) {
+      .celebrate {
+        font-size: 25px;
+        line-height: 28px;
+      }
       .light-div {
         height: 160px;
       }
