--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -133,12 +133,15 @@
 
 <style>
   .celebrate{
+    position: absolute;
+    right: -500px;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
-    font-size: 45px;
-    line-height: 44px;
+    font-size: 39px;
+    line-height: 40px;
     text-align: center;
     color: #FFFFFF;
+    max-width: 500px;
   }
 .light-div {
   background: #7B8E42;
