--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -265,7 +265,7 @@
     .time-and-text .time.achivement {
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
-      font-size: 45px;
+      font-size: clamp(38px, 2vw, 45px);
       line-height: 44px;   
       letter-spacing: -0.01em;
       color: #FFFFFF;
