--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -308,7 +308,8 @@
         margin-left: 20px;
       }
       .celebrate {
-        right: -400px;
+        right: -300px;
+        max-width: 50vw;
       }
       .light-div {
         height: 200px;
