--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -321,6 +321,7 @@
 
     @media screen and (max-width: 768px) {
       .celebrate {
+        position: unset;
         font-size: 25px;
         line-height: 28px;
       }
