--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -322,8 +322,10 @@
     @media screen and (max-width: 768px) {
       .celebrate {
         position: unset;
-        font-size: 25px;
-        line-height: 28px;
+        font-size: 18px;
+        line-height: 24px;
+        text-align: left;
+        padding-top: 20px;
       }
       .light-div {
         height: 160px;
