--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -134,6 +134,7 @@
 <style>
   .celebrate{
     position: absolute;
+    z-index: 2;
     right: -500px;
     font-family: 'PP Radio Grotesk';
     font-weight: 700;
