--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -372,6 +372,12 @@
       }
      
     }
+
+  @media screen and (max-width: 617px) {
+    .light-div {
+      height: 200px;
+    }
+  }
     
 </style>
 
