--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -378,6 +378,12 @@
       height: 200px;
     }
   }
+
+  @media screen and (max-width: 425px) {
+    .light-div {
+      height: 240px;
+    }
+  }
     
 </style>
 
