--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -384,6 +384,12 @@
       height: 240px;
     }
   }
+
+  @media screen and (max-width: 323px) {
+    .light-div {
+      height: 270px;
+    }
+  }
     
 </style>
 
