--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -383,6 +383,10 @@
     .light-div {
       height: 240px;
     }
+
+    .time-and-text .time.achivement {
+      max-width: 60vw;
+    }
   }
 
   @media screen and (max-width: 323px) {
