--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -309,10 +309,19 @@
         margin-left: 20px;
       }
       .celebrate {
-        right: -300px;
+        right: -390px;
         max-width: 50vw;
       }
     
+    }
+
+    @media screen and (max-width: 822px){
+    
+      .celebrate {
+        right: -310px;
+        
+      }
+
     }
 
 
