--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -347,6 +347,7 @@
         position: absolute;
         right: -15vw;
         top: -6vw;
+        max-height: 150px;
       }
       .time-and-text .time.achivement {   
         font-size: clamp(32px, 2vw, 36px);
