--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -385,6 +385,10 @@
     .light-div {
       height: 200px;
     }
+
+    .img-break-confetty-mb {
+      max-width: 182px;
+    }
   }
 
   @media screen and (max-width: 425px) {
