--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -396,6 +396,10 @@
     .time-and-text .time.achivement {
       max-width: 60vw;
     }
+
+    .img-break-confetty-mb {
+      max-height: unset;
+    }
   }
 
   @media screen and (max-width: 323px) {
