--- a/templates/page.thirty-day-challenge.liquid
+++ b/templates/page.thirty-day-challenge.liquid
@@ -16,9 +16,9 @@
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "30 Days to Sweet Success: ", subTitle: "A Blood Sugar Challenge", textHero: "Support your glucose and feel amazing. Expert guidance. Personalized support. All natural supplements. We're with you every step  of the way." %}
 {% render 'thirty-day-break-it-down' %}
 {% render 'thirty-day-challenge-say-goodby-section' %}
-{% render 'thirty-day-what-is-for-you', realChanges: realChanges, ctaButtonLink: "/products/curalin-pack", ctaTitle: "Sweeter days ahead" %}
-{% render 'thirty-day-challenge-section' ctaButtonLink: "/products/curalin-pack", ctaTitle: "Join the Challenge!" %}
-{% render 'thirty-day-video-reviews', maintitle: 'Real results from real people', ctaButtonLink: "/products/curalin-pack", ctaTitle: "Join the Challenge!" %}
-{% render 'thirty-day-challenge-is-for-you', challenges: challenges, ctaButtonLink: "/products/curalin-pack", ctaTitle: "Challenge Accepted!" %}
+{% render 'thirty-day-what-is-for-you', realChanges: realChanges, ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Sweeter days ahead" %}
+{% render 'thirty-day-challenge-section' ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!" %}
+{% render 'thirty-day-video-reviews', maintitle: 'Real results from real people', ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Join the Challenge!" %}
+{% render 'thirty-day-challenge-is-for-you', challenges: challenges, ctaButtonLink: "/products/30-day-blood-sugar-challenge-pp", ctaTitle: "Challenge Accepted!" %}
 {% render 'thirty-day-commitement' %}
 
