--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -36,6 +36,7 @@
 {% render 'script.round-converted-currency' %}
 
 <div class="product-template-all-in-one">
+  {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "green", logoFileName: "logo-white-black-friday.png" %}
   {% render 'product-all-in-one-cta-section-sliders', challenge_value: challenge_value, curaeats_value: curaeats_value %}
   {% render 'bundle-gifts-section', challenge_value: challenge_value, curaeats_value: curaeats_value %}
   {% render 'product-all-in-one-how-to-section' %}
