--- a/snippets/product-all-in-one-thirty-day-money-back.liquid
+++ b/snippets/product-all-in-one-thirty-day-money-back.liquid
@@ -7,6 +7,10 @@
 
 
 <style>
+  .free-shipping-section {
+    display: flex;
+    justify-content: center;
+  }
   @media screen and (max-width: 768px) {
      .free-shipping-section img {
         -o-object-fit: cover;
