--- a/snippets/product-all-in-one-thirty-day-money-back.liquid
+++ b/snippets/product-all-in-one-thirty-day-money-back.liquid
@@ -10,6 +10,7 @@
   .free-shipping-section {
     display: flex;
     justify-content: center;
+    max-width: 40%;
   }
   @media screen and (max-width: 768px) {
      .free-shipping-section img {
