--- a/snippets/product-all-in-one-thirty-day-money-back.liquid
+++ b/snippets/product-all-in-one-thirty-day-money-back.liquid
@@ -10,6 +10,8 @@
   .free-shipping-section {
     display: flex;
     justify-content: center;
+  }
+  .free-shipping-section img {
     max-width: 40%;
   }
   @media screen and (max-width: 768px) {
