--- a/templates/product.all-in-one-thirty-day.liquid
+++ b/templates/product.all-in-one-thirty-day.liquid
@@ -38,7 +38,7 @@
 <div class="product-template-all-in-one">
   {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "green", logoFileName: "logo-white-black-friday.png" %}
   {% render 'product-all-in-one-cta-section-sliders', challenge_value: challenge_value, curaeats_value: curaeats_value %}
-  {% render 'thirty-day-video-reviews', maintitle: 'This helped me like nothing else did', isProduct: true %}
+  {% render 'product-thirty-day-video-reviews', maintitle: 'This helped me like nothing else did' %}
   {% render 'thirty-day-commitement' %}
   {% render 'product-all-in-one-thirty-day-money-back' %} 
   {% render 'product-all-in-one-back-to-top' %}
